operator/config/policies/test/owner/serviceaccount/resource.yaml
apiVersion: workspaces.io/v1alpha1
kind: Workspace
metadata:
  name: workspace-sample
  namespace: workspaces-system
spec:
  visibility: private
  owner:
    id: owner
