operator/config/policies/workspace_owner_set.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-owner-workspace
spec:
  background: false
  rules:
    - name: set-owner-workspace
      match:
        any:
        - resources:
            kinds:
            - Workspace
            namespaces:
            - workspaces-system
            operations:
            - CREATE
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              workspaces.io/is-creator-serviceaccount: "{{ starts_with(request.userInfo.username, 'system:serviceaccount:' ) | to_string(@) }}"
              workspaces.io/owner: "{{ request.object.spec.owner.id }}"
    - name: set-owner-workspace-serviceaccount-namespace
      match:
        any:
        - resources:
            kinds:
            - Workspace
            namespaces:
            - workspaces-system
            operations:
            - CREATE
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              (workspaces.io/is-creator-serviceaccount): "true"
              workspaces.io/creator-serviceaccount: "{{ serviceAccountName }}"
              workspaces.io/creator-namespace: "{{ serviceAccountNamespace }}"
    - name: set-owner-workspace-user
      match:
        any:
        - resources:
            kinds:
            - Workspace
            namespaces:
            - workspaces-system
            operations:
            - CREATE
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              (workspaces.io/is-creator-serviceaccount): "false"
              workspaces.io/creator: "{{ request.userInfo.username }}"
