operator/config/policies/test/owner/serviceaccount/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: set-owner-workspace
policies:
  - ../../../workspace_owner_set.yaml
resources:
  - ./resource.yaml
userinfo: userinfo.yaml
results:
  - patchedResource: ./patched_resource.yaml
    policy: set-owner-workspace
    rule: set-owner-workspace-serviceaccount-namespace
    resources: 
      - workspaces-system/workspace-sample
    kind: InternalWorkspace
    result: pass
  - policy: set-owner-workspace
    rule: set-owner-workspace-user
    resources: 
      - workspaces-system/workspace-sample
    kind: InternalWorkspace
    result: skip
