operator/config/policies/test/owner/serviceaccount/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: creator
userInfo:
  username: system:serviceaccount:workspaces-system:saname
